feat: integrate docs
