# storage-api/docs/swagger.json
@@ -4,6 +4,26 @@
         "contact": {}
     },
     "paths": {
+        "/health": {
+            "get": {
+                "description": "Health check",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Health check",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/rest.HealthResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/scan/start": {
             "post": {
                 "description": "Start a scan session",
@@ -116,6 +136,14 @@
                 "code": {
                     "type": "integer"
                 },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "rest.HealthResponse": {
+            "type": "object",
+            "properties": {
                 "message": {
                     "type": "string"
                 }
